<resources>
    <string name="app_name">WaffleStock</string>
    <string name="sign_in">Sign In</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="trade">Trade</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="email_or_username">Email or Username</string>
    <string name="pronouns">Pronouns</string>
    <string name="gender">Gender</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="do_not_want_to_say">Do not want to say</string>
    <string name="type_your_username">Type your username...</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="country">Country</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="email">Email</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="email_whatsapp_text">Email, Whatsapp, Text</string>
    <string name="add_more_funds_on_the_account">Add more funds on the account</string>
    <string name="manage_notifications">Manage notification</string>
    <string name="change_username_email">Change username / email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="up_to_200_characters">Up to 200 characters</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="username">Username</string>
    <string name="type_your_email">Type your email...</string>
    <string name="type_your_gender">Type your gender...</string>
    <string name="type_your_education">Type your education</string>
    <string name="type_your_password">Type your password...</string>
    <string name="education">Education</string>
    <string name="you_have_to_agree_terms_and_condition_to_use_wafflestock">You have to agree terms and condition to use WaffleStock</string>
    <string name="_continue">Continue</string>
    <string name="confirmBuy">Confirm Buy</string>
    <string name="dismiss">Dismiss</string>
    <string name="create_group">Create Group</string>
    <string name="validate_email">Validate Email</string>
    <string name="sent_to">Sent to</string>
    <string name="validate">Vallidate</string>
    <string name="resend_code">Resend Code</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="signout">Sign Out</string>
    <string name="get_started">Get Started</string>
    <string name="send_code">Send code</string>
    <string name="welcome_back">Welcome back</string>
    <string name="personal_information">Personal Information</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="accept_terms_and_condition"><u>Accept terms and conditions</u></string>
    <string name="no_internet">No Internet</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="input_email">Please input email</string>
    <string name="password_must_contain_at_least_6_character">Password must contain at least 6 Characters</string>
    <string name="input_password">Please input password</string>
    <string name="input_username">Please input username</string>
    <string name="passwords_not_matched"><b>Passwords do not match</b></string>
    <string name="hey_welcome">Hey! Welcome</string>
    <string name="how_can_we_call_you">Hi! How can we call you ?</string>
    <string name="ex_beginner_goat">Ex. Beginner Goat</string>
    <string name="this_information_will_be_displayed_on">This information will be displayed on your profile, you can fill it later.</string>
    <string name="this_information_wont_be_shared_with_public">This information won’t be shared with public</string>
    <string name="password_changed">Password Changed!</string>
    <string name="holdings">Holdings</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="followings">Followings</string>
    <string name="people">People</string>
    <string name="company">Company</string>
    <string name="group">Group</string>
    <string name="portfolio">Portfolio</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="badges">Badges</string>
    <string name="buying_power">Buying Power</string>
    <string name="technology">Technology</string>
    <string name="communication">Communication</string>
    <string name="healthcare">Healthcare</string>
    <string name="top_5_holding">Top 5 holding</string>
    <string name="create_new_group">Create new group</string>
    <string name="new_group">New Group</string>
    <string name="group_subject">Group subject</string>
    <string name="group_photo">Group photo</string>
    <string name="ex_the_best_team">EX. The Best Team</string>
    <string name="description">Description</string>
    <string name="participants">Participants</string>
    <string name="privacy">Privacy</string>
    <string name="public_group">Public</string>
    <string name="private_group">Private Group</string>
    <string name="add_participants">Add participants</string>
    <string name="next">Next</string>
    <string name="usd">USD</string>
    <string name="typeHere">Type here...</string>
    <string name="congratulate_you_bought">Congratulations, you bought</string>


    <string-array name="array_stock_chart">
        <item>1D</item>
        <item>1W</item>
        <item>1M</item>
        <item>3M</item>
        <item>6M</item>
        <item>1Y</item>
        <item>All</item>
    </string-array>
</resources>