<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/vertical_baseline"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:paddingVertical="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/edittext_label_style"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_border"
        android:paddingVertical="@dimen/edittext_vertical_padding"
        android:paddingHorizontal="@dimen/edittext_horizontal_padding"
        android:hint="@string/typeHere"
        android:textSize="@dimen/edittext_font_size"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        style="@style/edittext_label_style"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtBio"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bg_grey_border"
        android:gravity="left"
        android:paddingVertical="@dimen/edittext_vertical_padding"
        android:paddingHorizontal="@dimen/edittext_horizontal_padding"
        android:hint="@string/typeHere"
        android:textSize="@dimen/edittext_font_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_to_200_characters"/>

    <TextView
        android:id="@+id/txvSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_blue_rect"
        android:text="@string/save"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/button_font_size"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>