<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/vertical_baseline">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:paddingVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_group"
            android:textSize="@dimen/app_name_font_size"
            android:textColor="@color/color_app_name"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_subject"
            android:textColor="@color/color_big_title"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imvGroupPicture"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/default_img"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="35dp"/>

                    <ImageView
                        android:id="@+id/imvSelectGroupPicture"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_plus"
                        android:layout_gravity="bottom|right"
                        android:padding="10dp"
                        android:layout_marginBottom="-10dp"
                        android:layout_marginRight="-10dp"/>

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Group photo"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_grey_border"
                android:paddingHorizontal="@dimen/edittext_horizontal_padding"
                android:paddingVertical="@dimen/edittext_vertical_padding"
                android:layout_marginLeft="15dp"
                android:hint="@string/ex_the_best_team"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/color_big_title"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bg_grey_border"
            android:paddingHorizontal="@dimen/edittext_horizontal_padding"
            android:paddingVertical="@dimen/edittext_vertical_padding"
            android:hint="@string/ex_the_best_team"
            android:layout_marginTop="10dp"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:textColor="@color/color_big_title"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="17sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imvSelectParticipant"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_plus"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/color_big_title"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bg_grey_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/public_group"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:padding="15dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txvContinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/bg_blue_rect"
            android:text="@string/create_group"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/button_font_size"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Cancel"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/color_big_title"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</ScrollView>